--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -15,6 +15,5 @@
     padding-bottom: 12px;
     font-size: 2.625rem;
     line-height: 48px;
-    max-width: 420px;
   }
 }
