--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -14,6 +14,5 @@
 @media screen and (min-width: 719px) {
   .profile__occupation {
     padding-bottom: 0px;
-    max-width: 460px;
   }
 }
